closure actions now

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
 
 	<h2 id="title">Customers</h2>
 
-	{{ customer-input newCustomer="newCustomer" }}
+	{{ customer-input add=(route-action "add") }}
 
 	<nav class="navbar well">
 
