--- a/app/templates/components/customer-input.hbs
+++ b/app/templates/components/customer-input.hbs
@@ -15,5 +15,5 @@
 		</label>
 	</div>
 
-	<button {{ action "submit" newUser }} class="btn btn-default"> Add Customer </button>
+	<button {{ action "add" newUser }} class="btn btn-default"> Add Customer </button>
 </form>
