--- a/app/templates/trials.hbs
+++ b/app/templates/trials.hbs
@@ -1,1 +1,1 @@
-{{ customer-list customers=filtered deleteCustomer="deleteCustomer" }}
+{{ customer-list customers=filtered delete=(route-action "delete") }}
