--- a/app/templates/components/delete-customer.hbs
+++ b/app/templates/components/delete-customer.hbs
@@ -1,1 +1,1 @@
-<button {{ action "submit" customer }} class="btn btn-danger"> X </button>
+<button {{ action (action this.attrs.delete customer) }} class="btn btn-danger"> X </button>
