--- a/app/templates/subscriptions.hbs
+++ b/app/templates/subscriptions.hbs
@@ -1,2 +1,1 @@
-{{ customer-list customers=filtered showSubscriberInfo=true deleteCustomer="deleteCustomer" }}
-
+{{ customer-list customers=filtered delete=(route-action "delete") showSubscriberInfo=true }}
