--- a/app/templates/subscriptions.hbs
+++ b/app/templates/subscriptions.hbs
@@ -1,1 +1,1 @@
-{{ customer-list customers=filtered delete=(route-action "delete") showSubscriberInfo=true }}
+{{ customer-list customers=filtered delete=(route-action "delete") toggleSubscribe=(route-action "toggleSubscribe") showSubscriberInfo=true }}
