--- a/app/templates/trials.hbs
+++ b/app/templates/trials.hbs
@@ -1,1 +1,1 @@
-{{ customer-list customers=filtered delete=(route-action "delete") }}
+{{ customer-list customers=filtered delete=(route-action "delete") toggleSubscribe=(route-action "toggleSubscribe") }}
