refactored some controller logic into es6 const functions

--- a/app/templates/components/customer-list.hbs
+++ b/app/templates/components/customer-list.hbs
@@ -9,7 +9,7 @@
           <th>Subscriber Since</th>
           <th>Expires</th>
       {{else}}
-          <th>Expired</th>
+          <th>Subscription Expired</th>
       {{/if}}
 
 
