restyling of app components

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,8 @@
 <div class="container">
 
 	<h2 id="title">Sodashop Customers</h2>
-
-	<nav class="navbar well">
+	<hr>
+	<nav class="navbar re-positioned">
 
 		<ul class="nav nav-pills">
 
