changed body font to Lovato

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
 <div class="container">
 
 	<h2 id="title">Sodashop Customers</h2>
