Trials -> Trial Users

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,7 +16,7 @@
 
 			{{#link-to 'trials' tagName="li" href=false}}
 			    {{#link-to 'trials' bubbles=false}}
-			        Trials
+			        Trial Users
 			    {{/link-to}}
 			{{/link-to}}
 
